# oatpp-bob

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/oatpp-bob/: Deserializer.cpp  Deserializer.hpp  ObjectMapper.cpp  ObjectMapper.hpp  Serializer.cpp  Serializer.hpp  Utils.cpp  Utils.hpp
test/: CMakeLists.txt
test/oatpp-bob/: IntegerTest.cpp  IntegerTest.hpp  ObjectMapperTest.cpp  ObjectMapperTest.hpp  SkipTest.cpp  SkipTest.hpp  UtilsTest.cpp  UtilsTest.hpp  tests.cpp
